[gd_scene load_steps=3 format=2]

[ext_resource path="res://s004_change_ui_text/scene.gd" type="Script" id=1]
[ext_resource path="res://s004_change_ui_text/text.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1058.0
margin_bottom = 631.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_area" type="ColorRect" parent="background"]
margin_left = 16.0
margin_top = 405.0
margin_right = 1035.0
margin_bottom = 613.0
color = Color( 0.368627, 0.423529, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="background/text_area"]
margin_left = 20.0
margin_top = 12.0
margin_right = 990.0
margin_bottom = 194.0
autowrap = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_button" type="Button" parent="background"]
margin_left = 259.0
margin_top = 132.0
margin_right = 477.0
margin_bottom = 252.0
text = "next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_to_top" type="Button" parent="background"]
margin_left = 620.0
margin_top = 253.0
margin_right = 800.0
margin_bottom = 346.0
text = "back to top"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="background/next_button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="background/back_to_top" to="." method="_on_back_to_top_pressed"]
